include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = scribes
DOC_ENTITIES =
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/scribes_add_dialog.png  \
	figures/scribes_completion.png \
	figures/scribes_template_editor.png \
	figures/scribes_document_switcher.png  \
	figures/scribes_test_template.png \
	figures/scribes_toolbar.png \
	figures/scribes_placeholder.png \
	figures/scribes_window.png \
	figures/scribes_popup_menu.png

DOC_LINGUAS =
