SUBDIRS = SupportedEncodings ComboBoxData Error
encodingsystemdir = $(pythondir)/SCRIBES/EncodingSystem
encodingsystem_PYTHON = \
	__init__.py \
	Manager.py \
	Utils.py \
	EncodingGuessListUpdater.py \
	EncodingListUpdater.py \
	FileEncodingsUpdater.py \
	EncodingGuessListMetadata.py \
	EncodingListMetadata.py \
	FileEncodingsMetadata.py

clean-local:
	rm -rf *.pyc *.pyo

