plugininitializerdir = $(pythondir)/SCRIBES/PluginInitializer
plugininitializer_PYTHON = \
	__init__.py \
	Manager.py \
	Initializer.py \
	PythonPathUpdater.py \
	PluginPathValidator.py \
	PluginPathErrorHandler.py \
	HomePluginPathCreator.py \
	ErrorManager.py \
	ModuleFinder.py \
	ModuleInitializer.py \
	ModuleValidator.py \
	LanguageModuleValidator.py \
	PluginValidator.py \
	PluginInitializer.py \
	PluginLoader.py \
	PluginUnloader.py \
	PluginsUpdater.py \
	PluginsDestroyer.py \
	PluginReloader.py

clean-local:
	rm -rf *.pyc *.pyo
