SUBDIRS = ExternalProcess
savesystemdir = $(pythondir)/SCRIBES/SaveSystem
savesystem_PYTHON = \
	__init__.py \
	Manager.py \
	UnnamedDocumentCreator.py \
	AutomaticSaver.py \
	SessionManager.py \
	ReadonlyHandler.py \
	DbusDataSender.py \
	DbusDataReceiver.py \
	DbusSaveProcessorMonitor.py \
	SavedSignalEmitter.py \
	SaveErrorSignalEmitter.py \
	ErrorDisplayer.py \
	QuitSaver.py \
	SessionCompleter.py \
	FocusOutSaver.py \
	FileModificationMonitor.py \
	FileNameGenerator.py \
	NameGenerator.py \
	NewFileRemover.py

clean-local:
	rm -rf *.pyc *.pyo
