uriloaderdir = $(pythondir)/SCRIBES/URILoader
uriloader_PYTHON = \
	__init__.py \
	Manager.py \
	StateNotifier.py \
	URITypeChecker.py \
	LocalURIPermissionChecker.py \
	RemoteURIPermissionChecker.py \
	LocalURIReader.py \
	RemoteURIReader.py \
	ErrorManager.py \
	TextInserter.py \
	Initializer.py

TAGS_FILES = $(uriloader_PYTHON)

clean-local:
	rm -rf *.pyc *.pyo

