uriloaderdir = $(pythondir)/SCRIBES/URILoader
uriloader_PYTHON = \
	__init__.py \
	Manager.py \
	StateNotifier.py \
	BusyManager.py\
	URIReader.py \
	ErrorManager.py \
	TextInserter.py \
	EncodingProcessor.py \
	Destroyer.py \
	Initializer.py \
	FileMounter.py \
	FileTypeChecker.py \
	GIOError.py \
	MountOperator.py \
	GIOErrorHandler.py

TAGS_FILES = $(uriloader_PYTHON)

clean-local:
	rm -rf *.pyc *.pyo

