SUBDIRS = GUI
supportedencodingsdir = $(pythondir)/SCRIBES/EncodingSystem/SupportedEncodings
supportedencodings_PYTHON = \
	__init__.py \
	Trigger.py \
	Manager.py \
	Encodings.py \
	EncodingListDatabaseMonitor.py \
	EncodingListDispatcher.py \
	EncodingListDatabaseUpdater.py \
	Utils.py

clean-local:
	rm -rf *.pyc *.pyo
