externalprocessdir = $(pythondir)/SCRIBES/SaveSystem/ExternalProcess
externalprocess_PYTHON = \
	__init__.py \
	ScribesSaveProcess.py \
	Manager.py \
	Quiter.py \
	SIGNALS.py \
	Main.py \
	JobSpooler.py \
	TextEncoder.py \
	FileReplacer.py \
	Completer.py \
	DbusService.py \
	ErrorManager.py

clean-local:
	rm -rf *.pyc *.pyo
