bufferdir = $(pythondir)/SCRIBES/GUI/MainGUI/Buffer
buffer_PYTHON = \
	__init__.py \
	Manager.py \
	ModificationStateNotifier.py \
	ModificationStateReseter.py \
	UndoRedo.py \
	StyleSchemeUpdater.py \
	LanguageSetter.py \
	CursorPositionNotifier.py \
	CursorPlacer.py \
	CursorPositionUpdater.py \
	ResponsivenessManager.py \
	Buffer.py

clean-local:
	rm -rf *.pyc *.pyo
