SUBDIRS = DatabaseListeners
viewdir = $(pythondir)/SCRIBES/GUI/MainGUI/View
view_PYTHON = \
	__init__.py \
	Manager.py \
	View.py \
	Refresher.py \
	SensitivityManager.py \
	ReadonlyManager.py \
	SpellChecker.py \
	ResponsivenessManager.py \
	PopupMenuManager.py \
	DragAndDrop.py \
	FullscreenManager.py

clean-local:
	rm -rf *.pyc *.pyo
