treeviewdir = $(pythondir)/SCRIBES/EncodingSystem/SupportedEncodings/GUI/Treeview

treeview_PYTHON = \
	__init__.py \
	Manager.py \
	Initializer.py \
	ActiveEncodingRenderer.py \
	ModelUpdater.py \
	RowSelector.py \
	ModelDataGenerator.py \
	SelectedEncodingsExtractor.py

clean-local:
	rm -rf *.pyc *.pyo
