bardir = $(pythondir)/SCRIBES/GUI/MainGUI/StatusBar/MessageBar
bar_PYTHON = \
	__init__.py \
	Manager.py \
	Widget.py \
	Displayer.py \
	Signals.py \
	Compositor.py \
	BarSizeUpdater.py \
	ViewSizeUpdater.py \
	Positioner.py \
	VisibilityUpdater.py \
	Animator.py \
	DeltaCalculator.py \
	DisplayerManager.py \
	PublicAPIVisibilityUpdater.py \
	HideTimer.py \
	EventBoxColorChanger.py

clean-local:
	rm -rf *.pyc *.pyo
