toolbarvisibilitydir = $(pythondir)/SCRIBES/GUI/MainGUI/Toolbar/ToolbarVisibility
toolbarvisibility_PYTHON = \
	__init__.py \
	Manager.py \
	Displayer.py \
	MouseSensor.py \
	Animator.py \
	DeltaCalculator.py \
	SizeUpdater.py \
	Resizer.py \
	VisibilityUpdater.py \
	HideTimer.py \
	APIVisibilityUpdater.py

clean-local:
	rm -rf *.pyc *.pyo
