toolbuttonsdir = $(pythondir)/SCRIBES/GUI/MainGUI/Toolbar/Toolbuttons
toolbuttons_PYTHON = \
	__init__.py \
	NewToolButton.py \
	OpenToolButton.py \
	SaveToolButton.py \
	PrintToolButton.py \
	UndoToolButton.py \
	RedoToolButton.py \
	GotoToolButton.py \
	SearchToolButton.py \
	ReplaceToolButton.py \
	PreferenceToolButton.py \
	PreferenceMenuManager.py \
	HelpToolButton.py \
	Spinner.py \
	RecentMenu.py

clean-local:
	rm -rf *.pyc *.pyo
