listenersdir = $(pythondir)/SCRIBES/GUI/MainGUI/View/DatabaseListeners
listeners_PYTHON = \
	__init__.py \
	Manager.py \
	FontListener.py \
	RightMarginPositionListener.py \
	TextWrappingListener.py \
	ShowRightMarginListener.py \
	UseTabsListener.py \
	SpellCheckListener.py \
	TabWidthListener.py

clean-local:
	rm -rf *.pyc *.pyo
