statusmessagedir = $(pythondir)/SCRIBES/GUI/MainGUI/StatusBar/Feedback/MessageSystem
statusmessage_PYTHON = \
	__init__.py \
	Signals.py \
	Manager.py \
	TimedMessageHandler.py \
	StackMessageHandler.py \
	FallbackMessageHandler.py \
	MessageBarUpdater.py \
	MessageBarDisplayer.py \
	MessageFormatter.py \
	FileLoadHandler.py \
	SavedHandler.py \
	ReadonlyHandler.py \
	ClipboardHandler.py

clean-local:
	rm -rf *.pyc *.pyo
