statusimagedir = $(pythondir)/SCRIBES/GUI/MainGUI/StatusBar/Feedback/StatusImage
statusimage_PYTHON = \
	__init__.py \
	Manager.py \
	ImageDisplayer.py \
	ImageIDProcessor.py \
	TimedImageSwitcher.py \
	FeedbackDispatcher.py \
	StackImageSwitcher.py \
	FallbackImageSwitcher.py \
	FileModificationStateSwitcher.py \
	SavedStateSwitcher.py \
	ReadonlyModeSwitcher.py \
	FileLoadingStateSwitcher.py \
	SaveErrorSwitcher.py

clean-local:
	rm -rf *.pyc *.pyo
