statusmessagedir = $(pythondir)/SCRIBES/GUI/MainGUI/StatusBar/Feedback/StatusMessage
statusmessage_PYTHON = \
	__init__.py \
	Manager.py \
	MessageDisplayer.py \
	FeedbackDispatcher.py \
	MessageFormatter.py \
	StackMessageSwitcher.py \
	FallbackMessageSwitcher.py \
	FileModificationStateSwitcher.py \
	SavedStateSwitcher.py \
	TimedMessageSwitcher.py \
	FileLoadingStateSwitcher.py \
	ReadonlyModeSwitcher.py \
	SaveErrorSwitcher.py

clean-local:
	rm -rf *.pyc *.pyo
